# sneu_rs

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  index.html  package-lock.json
.github/workflows/: rust.yml  trunkrs.yml
public/: index.css  index.js  manifest.json  service_worker.js
src/: app.rs  main.rs  router.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: app_title.rs  bulma_button.rs  centered_viewport.rs  file_picker.rs  form_input.rs  logo.rs  markdown.rs  markdown_viewer.rs  mod.rs  pill_button.rs  safe_html.rs  toast.rs  unsafe_html.rs  user_profile.rs
src/components/challenge/: challenge_card.rs  challenge_form.rs  footer.rs  mod.rs  title.rs  utils.rs  whys.rs
src/components/challenge/challenge_card/: footer.rs  mod.rs  title.rs  whys.rs
src/components/lasted/: footer.rs  mod.rs
src/components/layout/: header.rs
src/components/loader/: mod.rs
src/components/markdown_viewer/: mod.rs
src/components/sign_in_form/: mod.rs  use_sign_in_handler.rs
src/components/use_lasted/: lasted.rs  mod.rs  utils.rs  wasted.rs  whys.rs
src/hooks/: mod.rs  use_authed_api_handler.rs  use_history.rs  use_profile.rs  use_redirect_on_auth.rs  use_redirect_unauthed.rs
src/providers/: mod.rs  use_auth.rs
src/providers/use_auth/: auth_message.rs  auth_provider.rs  mod.rs  use_auth.rs
src/router/: mod.rs  routes.rs  switch.rs
src/theme/: mod.rs
src/utils/: app_init.js  app_init.rs  constants.rs  datetime.rs  dom.rs  init_wasm.js  init_wasm.rs  json.rs  mod.rs
src/utils/sneu_api/: api_item.rs  mod.rs
src/views/: gallery.rs  home.rs  index.rs  markdown.rs  mod.rs  music.rs  not_found.rs  quick_js.rs  sign_in.rs  trial.rs  use_lasted.rs
src/views/gallery/: mod.rs  use_random_image_url.rs  use_synced_document_title.rs
src/views/home/: mod.rs  profile.rs  use_profile.rs
src/views/local_library/: local_library_link.rs  mod.rs
src/views/sign_in/: mod.rs  use_redirect_on_auth.rs  use_sign_in_handler.rs
src/views/sneu_player/: local_library.rs  media_list.rs  mod.rs  use_player_state.rs  video_player.rs
src/views/use_lasted/: create.rs  delete.rs  edit.rs  index.rs  mod.rs
src/views/use_lasted/index/: lasted_item.rs  mod.rs
src/views/user/: mod.rs  use_profile.rs
