[package]
name = "sneu_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19.3"
pulldown-cmark = "0.9.2"
gloo-utils = "0.1.5"
gloo-net = "0.2.4"
gloo-storage = "0.2.2"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
wasm-bindgen-futures = "0.4.32"
wasm-bindgen = "0.2.82"
httpstatus = "0.1.2"
log = "0.4.17"
wasm-logger = "0.2.0"
web-sys = "0.3.59"
yew-hooks = "0.1.56"
yew-router = "0.16.0"
