[package]
name = "sneu_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19.3"
yew-hooks = "0.1.56"
yew-router = "0.16.0"

gloo-utils = "0.1.5"
gloo-net = "0.2.4"
gloo-storage = "0.2.2"
gloo-file = "0.2.3"
gloo-timers = "0.2.4"

wasm-bindgen-futures = "0.4.33"
wasm-bindgen = "0.2.83"
js-sys = "0.3.60"

serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
httpstatus = "0.1.2"
log = "0.4.17"
wasm-logger = "0.2.0"
pulldown-cmark = "0.9.2"
base64 = "0.13.0"
nanoid = "0.4.0"
getrandom = { version = "0.2.7", features = ["js"] }
urlencoding = "2.1.2"
chrono = "0.4.22"

hbp_types = { git = "https://github.com/hoangph271/hbp_types", features = [] }

[dependencies.web-sys]
version = "0.3.60"
features = ["HtmlMediaElement", "HtmlAudioElement"]

[profile.release]
panic = 'abort'
codegen-units = 1
opt-level = 's'
lto = true

[features]
sneu_tauri = []
